add not viewed icon alert